# vyrothon-stage-1

./: .gitignore  Makefile  README.md  app.py  inference.py  pyproject.toml  requirements.txt  vyrothon_stage_1.ipynb
pocket_agent/: __init__.py  core.py  data.py  demo.py  eval.py  quantize.py  train.py
starter/: README.md  shadow_eval.jsonl
tests/: test_core.py
