[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-agent"
version = "0.1.0"
description = "Offline tool-calling assistant for the Pocket-Agent hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["pocket_agent"]
